# datascience-workflow

./: .gitignore  README.md  pyproject.toml
Jupyter-Notebooks/: exploration_template.ipynb  prediction_template.ipynb  titanic_exploration.ipynb  titanic_prediction.ipynb
utility/: __init__.py  dataframe_transformer.py
