[tool.poetry]
name = "utility"
version = "0.1.0"
description = "package that contains utility functions for data science workflows"
authors = ["Alex Gawrilow <gawrilow.alex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
ipykernel = "^6.1.0"
numpy = "^1.21.1"
pandas = "^1.3.1"
seaborn = "^0.11.1"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
rope = "^0.19.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
